# ai_inscription_app

./: .gitignore  COMPARISON.md  PYSIDE_README.md  README.md  TESTING.md  TEST_SUMMARY.md  leiden-epidoc-dpg.py  leiden-epidoc-pyside.py  leiden-epidoc.py  leiden_prompts.py  pyproject.toml  pytest.ini  run_tests.sh  test_separated.py
.github/: copilot-instructions.md
.github/workflows/: build-mac.yml  build-windows.yml  test.yml
tests/: __init__.py  conftest.py  test_converter.py  test_file_item.py  test_integration.py  test_prompts.py  test_theme.py
