[project]
name = "ai-inscription-app"
version = "0.1.0"
description = "An AI-powered application for inscription tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.67.0",
    "PySide6>=6.8.1",
]

[project.optional-dependencies]
build = [
    "nuitka>=2.5",
    "ordered-set>=4.1",
]